--- a/css/styles.css
+++ b/css/styles.css
@@ -15,32 +15,44 @@
     --bgd-white-color: #FFFFFF;
     --bgd-gray-color: #F5F5F5
 }
-
 body {
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
 }
-
 h1,
 h2,
 h3 {
     color: var(--title-text-color)
 }
-
+.page-header{
+    background-color: var(--bgd-white-color);
+}
+.hero{
+    background-color: #2F303A;
+}
 .logo {
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.03em;
-    color: var(--bgd-white-color);
+    line-height: 1.19
+    letter-spacing: 0.03em;  
 }
-
 .list {
     list-style: none;
 }
-
+.contact-details {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    color: var(--primary-text-color)
+}
+.contact-details:hover,
+.contact-details:focus {
+    color: var(--accent-color);
+}
 /*Site nav*/
 
 .site-nav .link {
@@ -51,24 +63,33 @@ h3 {
     line-height: 16px;
     letter-spacing: 0.02em;
 }
-
 .site-nav .link:hover,
 .site-nav .link:focus {
     color: var(--accent-color);
 }
-
 .site-nav .link.current {
     color: var(--accent-color);
 }
-
 .hero-title {
     color: var(--bgd-white-color);
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
-
 /* Section*/
 
 .section-title {
     color: var(--title-text-color);
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 /*Features*/
@@ -85,14 +106,43 @@ h3 {
     overflow: hidden;
 }
 
-.feature-list .title {
+.feature-list .title-features {
     color: var(--title-text-color);
+}
+.title-features {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
+.text-p{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
 }
 
 /*Team*/
 
-.team-list .title {
-    color: var(--title-text-color);
+.team-list .title-name {
+font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.03em;
+}
+.profession{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    letter-spacing: 0.03em;
 }
 
 /*Button*/
@@ -101,7 +151,6 @@ h3 {
     color: var(--bgd-white-color);
     background-color: var(--accent-color);
     border-color: transparent;
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 16px;
@@ -110,29 +159,26 @@ h3 {
     align-items: center;
     text-align: center;
     letter-spacing: 0.06em;
+    width: 216px;
+    height: 50px;
 }
-
 .button-portfolio {
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
     line-height: 26px;
-    background: #F5F4FA;
-    font-family: Roboto, sans-serif;
+    background-color: #F5F4FA;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
     border-color: transparent;
 }
-
 .button-portfolio:hover,
 .button-portfolio:focus {
     background-color: var(--accent-color);
     color: var(--bgd-white-color);
 }
-
 .adress {
-    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -140,18 +186,34 @@ h3 {
     letter-spacing: 0.03em;
     color: var(--bgd-white-color);
 }
-
-.contact-details {
-    font-family: 'Roboto';
+.contact-details-footer {
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.7;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
-
-.contact-details:hover,
-.contact-details:focus {
+.contact-details-footer:hover,
+.contact-details-footer:focus {
     color: var(--accent-color);
+}
+.footer {
+    background-color: #2F303A
+}
+.project-title{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: var(--title-text-color);
+}
+.project-descr{
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
 }
