--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ h3 {
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.19
+    line-height: 1.19;
     letter-spacing: 0.03em;  
 }
 .list {
@@ -81,6 +81,10 @@ h3 {
     text-transform: uppercase;
 }
 /* Section*/
+
+.section-three{
+    background-color: #F5F4FA;
+}
 
 .section-title {
     color: var(--title-text-color);
