--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,9 @@ body {
     color: var(--primary-text-color);
     font-family: Roboto, sans-serif;
 }
+a{
+    text-decoration: none;
+}
 h1,
 h2,
 h3 {
