--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,7 @@ font-style: normal;
     letter-spacing: 0.06em;
     width: 216px;
     height: 50px;
+    cursor: pointer;
 }
 .button-portfolio {
     font-style: normal;
@@ -175,6 +176,7 @@ font-style: normal;
     letter-spacing: 0.03em;
     color: var(--title-text-color);
     border-color: transparent;
+    cursor: pointer;
 }
 .button-portfolio:hover,
 .button-portfolio:focus {
@@ -219,4 +221,7 @@ font-style: normal;
     line-height: 30px;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
+}
+.section-project{
+    background-color: #F5F5F5;
 }
