--- a/css/styles.css
+++ b/css/styles.css
@@ -165,8 +165,10 @@ font-style: normal;
     width: 216px;
     height: 50px;
     cursor: pointer;
+    border-radius: 4px;
 }
 .button-portfolio {
+    border-radius: 4px;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
